# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-1a0b452742b318251a4f79171c4c5a766cf1a31fb60fa4a51af3fddd5cf10e2c.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230727095947_create_subscriptions_table.sql  20230815055628_make_status_not_null_in_subscriptins.sql  20230815060453_create_subscriptins_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriber.rs  subscriptions_confirm.rs
