[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "zero2prod"
[dependencies]
actix-web = "4"
tokio ={ version = "1" , features = ["macros","rt-multi-thread"]}
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid ={ version = "1", features = ["v4"] }
chrono ={ version = "0.4",default-features = false, features = ["clock"] }
tracing ={ version = "0.1" , features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-subscriber ={ version = "0.3", features = ["registry","env-filter"]}
tracing-log = "0.1"
once_cell = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
   "runtime-tokio", 
   "tls-rustls" ,
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
